<!--
  ~    Copyright (C) 2017 MINDORKS NEXTGEN PRIVATE LIMITED
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<resources>
    <string name="app_name">Kotlin-Networking</string>
    <string name="get_json_object">Get As JSON Object</string>
    <string name="get_json_array">Get As JSON Array</string>
    <string name="get_string">Get As String</string>
    <string name="open_get_api_Test_activity">Open Get Api Test Activity</string>
    <string name="open_post_api_Test_activity">Open post Api Test Activity</string>
    <string name="open_multipart_api_Test_activity">Open MultiPart Api Test Activity</string>
    <string name="post_json_object">Post As JSON Object</string>
    <string name="post_string">Post As String</string>
    <string name="post_json_array">Post As JSON Array</string>
    <string name="check_header">Check Header</string>
    <string name="create_user">create user JSONObject</string>
    <string name="create_new_user_object">create user Object</string>
    <string name="select_image_text">Select Image</string>
    <string name="download_image">Download Image</string>
    <string name="send_and_cancel">Send And Cancel</string>
</resources>
