<?xml version="1.0" encoding="utf-8"?><!--
  ~    Copyright (C) 2017 MINDORKS NEXTGEN PRIVATE LIMITED
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mindorks.sample.GetApiTestActivity">

    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_post_as_json_object"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:onClick="onClick"
            android:text="@string/post_json_object" />

        <Button
            android:id="@+id/btn_post_as_json_array"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/btn_post_as_json_object"
            android:layout_alignRight="@+id/btn_post_as_json_object"
            android:layout_below="@+id/btn_post_as_json_object"
            android:layout_marginTop="13dp"
            android:onClick="onClick"
            android:text="@string/post_json_array" />

        <Button
            android:id="@+id/btn_post_as_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_post_as_json_array"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:onClick="onClick"
            android:text="@string/post_string" />

        <Button
            android:id="@+id/btn_check_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_post_as_string"
            android:layout_centerHorizontal="true"
            android:onClick="onClick"
            android:text="@string/check_header" />

        <Button
            android:id="@+id/btn_create_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_check_header"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="17dp"
            android:onClick="onClick"
            android:text="@string/create_user" />

        <Button
            android:id="@+id/btn_create_new_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_create_user"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="17dp"
            android:onClick="onClick"
            android:text="@string/create_new_user_object" />
    </RelativeLayout>
</ScrollView>
